--- a/public/css/sikapta.css
+++ b/public/css/sikapta.css
@@ -1,9 +1,17 @@
 html {
   font-size: 14px;
 }
+
+body{
+  min-height: 700px;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
+  }
+  body{
+    height: 700px;
   }
 }
 
